--- a/spring-cloud-config-clientA.properties
+++ b/spring-cloud-config-clientA.properties
@@ -39,10 +39,10 @@ spring.h2.console.path=/h2
 
 # Datasource
 #spring.datasource.url=jdbc:h2:file:~/test
-spring.datasource.url=jdbc:h2:file:~/.h2/MYTESTDB;AUTO_SERVER=TRUE;MODE=Oracle
+spring.datasource.url=jdbc:h2:file:~/.h2/MYTESTDB;AUTO_SERVER=TRUE;MODE=Oracle;SCHEMA=andy
 spring.datasource.username=andy
 spring.datasource.password=123
-spring.datasource.schemaName=andy
+#spring.datasource.schemaName=andy
 #spring.datasource.schema=andy 
 spring.jpa.properties.hibernate.default_schema=andy
 spring.datasource.driver-class-name=org.h2.Driver
