--- a/spring-cloud-config-clientA.properties
+++ b/spring-cloud-config-clientA.properties
@@ -1,4 +1,3 @@
-﻿#info.component=Config Samples
 info:
   component: Config Samples
 logging:
@@ -10,35 +9,11 @@ server.port=8080
 endpoints.restart.enabled=true
 debug=true
 
-#
-#spring.application.name=foo
-#spring.profiles.active=production
-#spring.cloud.config.uri=http://localhost:8888
-#spring.cloud.config.label=master
-#spring:
-#  application:
-#    name: foo
-#  profiles:
-#    active: production
-#  cloud:
-#    config:
-#      uri: http://localhost:8888
-#      label: master
-
-#spring.profiles.active=dev
-#spring.h2.console.enabled=true 
-#jdbc.driver =org.h2.Driver
-#jdbc.url = jdbc:h2:~/test
-#jdbc.url =jdbc:h2:file:~/.h2/MYTESTDB;AUTO_SERVER=TRUE;MODE=Oracle
-#jdbc.username =sa
-#jdbc.password =
-
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 # Datasource
-#spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.url=jdbc:h2:file:~/.h2/MYTESTDB;AUTO_SERVER=TRUE;MODE=Oracle;SCHEMA=andy
 spring.datasource.username=andy
 spring.datasource.password=123
@@ -48,7 +23,7 @@ spring.jpa.properties.hibernate.default_schema=andy
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-#myBatis éç½®
+#myBatis 
 mybatis.mapperLocations =classpath:mapper/*.xml
 #mybatis.typeAliasesPackage= tk.mapper.model
 mybatis.typeAliasesPackage=spring.cloud.config.demo.domain.User
