--- a/spring-cloud-config-clientA-default.properties
+++ b/spring-cloud-config-clientA-default.properties
@@ -5,7 +5,7 @@ logging:
   levels:
     org.springframework.boot.env.PropertySourcesLoader: TRACE
     org.springframework.web: DEBUG
-logging.file =opt/logs/spring-cloud-config-demo-clientB.log
+logging.file =opt/logs/spring-cloud-config-demo-clientA.log
 server.port=8080
 endpoints.restart.enabled=true
 debug=true
@@ -51,4 +51,4 @@ mybatis.mapperLocations =classpath:mapper/*.xml
 #mybatis.typeAliasesPackage= tk.mapper.model
 mybatis.typeAliasesPackage=spring.cloud.config.demo.domain.User
 #mybatis.config =classpath:mybatis/*.xml 
-profile=spring-cloud-config-clientA
+#profile=spring-cloud-config-clientA
