--- a/spring-cloud-config-clientA.properties
+++ b/spring-cloud-config-clientA.properties
@@ -1,3 +1,5 @@
+﻿#info.component=Config Samples
+#file name:spring-cloud-config-clientA.properties
 info:
   component: Config Samples
 logging:
@@ -9,17 +11,17 @@ server.port=8080
 endpoints.restart.enabled=true
 debug=true
 
+
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 # Datasource
-spring.datasource.url=jdbc:h2:file:~/.h2/MYTESTDB;AUTO_SERVER=TRUE;MODE=Oracle;SCHEMA=andy
+#spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.url=jdbc:h2:file:~/.h2/MYTESTDB;AUTO_SERVER=TRUE;MODE=Oracle
 spring.datasource.username=andy
 spring.datasource.password=123
-#spring.datasource.schemaName=andy
-#spring.datasource.schema=andy 
-spring.jpa.properties.hibernate.default_schema=andy
+spring.datasource.schema=andy 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
