--- a/spring-cloud-config-clientB-default.properties
+++ b/spring-cloud-config-clientB-default.properties
@@ -1,4 +1,5 @@
 #info.component=Config Samples
+#file name:spring-cloud-config-clientB-default.properties
 info:
   component: Config Samples
 logging:
@@ -9,19 +10,4 @@ logging.file =opt/logs/spring-cloud-config-demo-clientB.log
 server.port=8081
 endpoints.restart.enabled=true
 debug=true
-profile=spring-cloud-config-clientB
-#
-#spring.application.name=foo
-#spring.profiles.active=production
-#spring.cloud.config.uri=http://localhost:8888
-#spring.cloud.config.label=master
-#spring:
-#  application:
-#    name: foo
-#  profiles:
-#    active: production
-#  cloud:
-#    config:
-#      uri: http://localhost:8888
-#      label: master
-
+#profile=spring-cloud-config-clientB
