--- a/spring-cloud-config-clientA-dev.properties
+++ b/spring-cloud-config-clientA-dev.properties
@@ -1,44 +1,21 @@
 ﻿#info.component=Config Samples
+#file name:spring-cloud-config-clientA-dev.properties
 info:
   component: Config Samples
 logging:
   levels:
     org.springframework.boot.env.PropertySourcesLoader: TRACE
     org.springframework.web: DEBUG
-logging.file =opt/logs/spring-cloud-config-demo-clientB.log
+logging.file =opt/logs/spring-cloud-config-demo-clientA.log
 server.port=8080
 endpoints.restart.enabled=true
 debug=true
-
-#
-#spring.application.name=foo
-#spring.profiles.active=production
-#spring.cloud.config.uri=http://localhost:8888
-#spring.cloud.config.label=master
-#spring:
-#  application:
-#    name: foo
-#  profiles:
-#    active: production
-#  cloud:
-#    config:
-#      uri: http://localhost:8888
-#      label: master
-
-#spring.profiles.active=dev
-#spring.h2.console.enabled=true 
-#jdbc.driver =org.h2.Driver
-#jdbc.url = jdbc:h2:~/test
-#jdbc.url =jdbc:h2:file:~/.h2/MYTESTDB;AUTO_SERVER=TRUE;MODE=Oracle
-#jdbc.username =sa
-#jdbc.password =
 
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 # Datasource
-#spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.url=jdbc:h2:file:~/.h2/MYTESTDB;AUTO_SERVER=TRUE;MODE=Oracle
 spring.datasource.username=andy
 spring.datasource.password=123
@@ -46,9 +23,9 @@ spring.datasource.schema=andy
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-#myBatis éç½®
+#myBatis 
 mybatis.mapperLocations =classpath:mapper/*.xml
 #mybatis.typeAliasesPackage= tk.mapper.model
 mybatis.typeAliasesPackage=spring.cloud.config.demo.domain.User
 #mybatis.config =classpath:mybatis/*.xml 
-profile=spring-cloud-config-clientA
+#profile=spring-cloud-config-clientA
