--- a/spring-cloud-config-clientA-default.properties
+++ b/spring-cloud-config-clientA-default.properties
@@ -20,7 +20,7 @@ spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:file:~/.h2/MYTESTDB;AUTO_SERVER=TRUE;MODE=Oracle
 spring.datasource.username=andy
 spring.datasource.password=123
-spring.datasource.schema=andy 
+#spring.datasource.schema=andy 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
